# piemoper

./: .gitmodules  PieMoPER_Documentation.md  README.md
scripts/: calibration.bash  camera_point_cloud_filter.py  data_publish.py  data_to_hdf5.py  find_usb_camera.py  load_data_example.py  setup_multi_gripper.bash  setup_multi_sensor.bash  start_multi_gripper.bash  start_multi_sensor.bash  start_multi_sensor_imu_only.bash  start_remote_multi_sensor.bash  start_sensor_gripper.bash  start_single_gripper.bash  start_single_sensor.bash  start_triple_sensor_imu_only.bash
source/: ros-noetic-ddynamic-reconfigure_0.3.2-1focal.20240913.193805_amd64.deb
src/PikaAnyArm/piper/pika_remote_piper/: CMakeLists.txt  package.xml
src/PikaAnyArm/piper/pika_remote_piper/config/: piper_rand_params.yaml
src/PikaAnyArm/piper/pika_remote_piper/launch/: teleop_rand_multi_piper.launch  teleop_rand_single_piper.launch
src/PikaAnyArm/piper/pika_remote_piper/scripts/: forward_inverse_kinematics.py  piper_FK.py  piper_IK.py  teleop_piper_publish.py  tools.py  transformations.py
src/PikaAnyArm/piper/piper_ros/: can_config.sh
src/PikaAnyArm/piper/piper_ros/piper/: CMakeLists.txt
src/PikaAnyArm/piper/piper_ros/piper/launch/: start_double_piper.launch  start_single_piper.launch
src/PikaAnyArm/piper/piper_ros/piper/scripts/: piper_ctrl_single_node.py  piper_pinocchio.py  piper_start_ms_node.py
src/PikaAnyArm/piper/piper_ros/piper_description/: CMakeLists.txt  package.xml
src/PikaAnyArm/piper/piper_ros/piper_description/config/: piper_gazebo_control.yaml  piper_no_gripper_gazebo_control.yaml
src/PikaAnyArm/piper/piper_ros/piper_description/urdf/: piper_description.csv  (+4 more)
src/PikaAnyArm/piper/piper_ros/piper_msgs/: CMakeLists.txt
src/data_msgs/: CMakeLists.txt  README.md  package.xml
src/data_msgs/msg/: ArmControlStatus.msg  CaptureStatus.msg  Gripper.msg  LocalizationStatus.msg  TeleopStatus.msg
src/data_msgs/srv/: CaptureService.srv
src/data_tools/: CMakeLists.txt  README.md  package.xml
src/data_tools/config/: aloha_data_params.yaml  aloha_teleop_data_params.yaml  lift_data_params.yaml  multi_pika_data_params.yaml  multi_pika_teleop_data_params.yaml  multi_sensor_imu_data_params.yaml  single_pika_data_params.yaml  single_pika_teleop_data_params.yaml
src/data_tools/include/: blockingDeque.h  dataUtility.h
src/data_tools/launch/: run_data_capture.launch  run_data_publish.launch  run_data_sync.launch  run_point_cloud_filter.launch
src/data_tools/scripts/: camera_point_cloud_filter.py  data_publish.py  data_sync.py  data_to_hdf5.py  hdf5_to_lerobot.py  load_data_example.py
src/data_tools/src/: dataCapture.cpp  dataPublish.cpp  dataSync.cpp
src/pika_gripper_description/: CMakeLists.txt  package.xml  rviz.rviz
src/pika_gripper_description/config/: pika_gripper_description.yaml
src/pika_gripper_description/launch/: display.launch  gazebo.launch
src/pika_gripper_description/meshes/: gripper_left_link.STL  gripper_right_link.STL
src/pika_gripper_description/urdf/: pika_gripper_description.csv  pika_gripper_description.urdf  piper_pika_gripper_description.urdf
src/pika_sensor_description/: CMakeLists.txt  package.xml  rviz.rviz
src/pika_sensor_description/config/: joint_names_pika_sensor_description.yaml
src/pika_sensor_description/launch/: display.launch  gazebo.launch
src/pika_sensor_description/meshes/: base_link.STL  center_link.STL  left_gripper1.STL  left_gripper_add_2.STL  left_hand_link.STL  left_link1.STL  left_link2.STL  right_gripper_add_1.STL  right_gripper_add_2.STL  right_hand_link_add.STL  right_link1.STL  right_link2.STL
src/pika_sensor_description/urdf/: pika_sensor_description.csv  pika_sensor_description.urdf
src/realsense-ros/realsense2_camera/launch/: multi_camera copy.launch  multi_camera.launch  multi_camera2.launch  multi_camera3.launch  rs_camera.launch  rs_multiple_devices.launch
src/realsense-ros/realsense2_camera/launch/includes/: nodelet.launch.xml
src/sensor_tools/: CMakeLists.txt  README.md  package.xml
src/sensor_tools/launch/: open_fisheye.launch  open_multi_gripper.launch  open_multi_sensor.launch  open_multi_sensor_imu_only.launch  open_remote_multi_sensor.launch  open_sensor_gripper.launch  open_single_gripper.launch  open_single_sensor.launch  open_triple_sensor_imu_only.launch
src/sensor_tools/scripts/: find_usb_camera.py  multi_transmit_topics.py  pika_base_localization.py  pika_base_localization_v2.py  pika_base_localization_v3.py  pika_base_localization_v4.py  pika_localization_setup.bash  setup_device.py  setup_multi_gripper.bash  setup_multi_sensor.bash  setup_sensor_gripper.bash  single_transmit_topics.py  start_multi_gripper.bash  start_multi_sensor.bash  start_sensor_gripper.bash  start_single_gripper.bash  start_single_sensor.bash  usb_camera.py
src/sensor_tools/src/: marker_publish.cpp  serial_gripper_imu.cpp
tools/: cam_bind_test_sense.py
(+7 files in other folders)
